--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ on:
 
 
 jobs:
-  build:
+  build-backend:
     runs-on: ubuntu-latest
 
     services:
@@ -35,5 +35,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      working-directory: backend
     - run: npm run build --if-present
+      working-directory: backend
     - run: npm test
+      working-directory: backend
