--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,5 +38,8 @@ jobs:
       working-directory: backend
     - run: npm run build --if-present
       working-directory: backend
-    - run: npm test
+    - name: Run tests
+      env:
+        dbPort: ${{ job.services.mysql.ports[3306] }}
+      run: npm test
       working-directory: backend
