--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "serverless-http": "^2.6.0"
+    "mysql": "^2.18.1"
   },
   "engines": {
     "node": "12.x"
