--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vue/cli-service": "^4.5.8",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.19.0",
     "querystring": "^0.2.0",
-    "vue": "^2.6.12"
-  },
-  "devDependencies": {
-    "@vue/cli-service": "^4.5.8",
+    "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12"
-  }
+  },
+  "devDependencies": {}
 }
